2006-10-02  Maciej Stachowiak  <mjs@apple.com>

        Build fix, not reviewed.
        
        - Added missing files to fix build.

        * WebView/WebDocumentLoadStateMac.h: Added.
        * WebView/WebDocumentLoadStateMac.m: Added.
        (-[WebDocumentLoadStateMac initWithRequest:]):
        (-[WebDocumentLoadStateMac dealloc]):
        (-[WebDocumentLoadStateMac setDataSource:]):
        (-[WebDocumentLoadStateMac dataSource]):
        (-[WebDocumentLoadStateMac setFrameLoader:]):

2006-10-01  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Brady and Oliver.
        
        - move things around so that WebDataSource and WebDocumentLoadState know about each other in
        the right way. This lines things up to move nearly all functionality down to WebDocumentLoadState.

        * Loader/WebDocumentLoadState.h:
        * Loader/WebDocumentLoadState.m:
        (-[WebDocumentLoadState initWithRequest:]):
        (-[WebDocumentLoadState dealloc]):
        (-[WebDocumentLoadState originalRequest]):
        * Loader/WebFrameLoader.h:
        * Loader/WebFrameLoader.m:
        (-[WebFrameLoader dealloc]):
        (-[WebFrameLoader addSubresourceLoader:]):
        (-[WebFrameLoader startLoadingMainResourceWithRequest:identifier:]):
        (-[WebFrameLoader dataSource]):
        (-[WebFrameLoader _setDocumentLoadState:]):
        (-[WebFrameLoader policyDataSource]):
        (-[WebFrameLoader _setPolicyDocumentLoadState:]):
        (-[WebFrameLoader clearDataSource]):
        (-[WebFrameLoader provisionalDataSource]):
        (-[WebFrameLoader _setProvisionalDocumentLoadState:]):
        (-[WebFrameLoader _clearProvisionalDataSource]):
        (-[WebFrameLoader _setState:]):
        (-[WebFrameLoader clearProvisionalLoad]):
        (-[WebFrameLoader commitProvisionalLoad]):
        (-[WebFrameLoader stopLoading]):
        (-[WebFrameLoader startLoading]):
        (-[WebFrameLoader startProvisionalLoad:]):
        (-[WebFrameLoader setupForReplace]):